--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,12 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+# Env files
+.env
+environment.*.ts
+
+# Firebase
+.firebase
+*-debug.log
+.runtimeconfig.json
