--- a/angular.json
+++ b/angular.json
@@ -46,7 +46,13 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -79,6 +85,23 @@
             "styles": ["src/styles.scss"],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "version": 2
+          },
+          "configurations": {
+            "production": {
+              "buildTarget": "collect-darija:build:production",
+              "serveTarget": "collect-darija:serve:production"
+            },
+            "development": {
+              "buildTarget": "collect-darija:build:development",
+              "serveTarget": "collect-darija:serve:development"
+            }
+          },
+          "defaultConfiguration": "production"
         }
       }
     }
