--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "prettier": "3.2.4",
     "pretty-quick": "^4.0.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "~5.3.2"
   }
 }
