firebase local emulator integration

--- a/firebase.json
+++ b/firebase.json
@@ -5,5 +5,21 @@
       "source": ".",
       "frameworksBackend": {}
     }
-  ]
+  ],
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  },
+  "emulators": {
+    "auth": {
+      "port": 9099
+    },
+    "firestore": {
+      "port": 8080
+    },
+    "ui": {
+      "enabled": true
+    },
+    "singleProjectMode": true
+  }
 }
