--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "precommit": "pretty-quick --staged",
     "prepare": "husky install .husky",
-    "emulator": "firebase emulators:start  --import=./data --export-on-exit data"
+    "emulator": "firebase emulators:start  --import=./data --export-on-exit data",
+    "seed": "npx ts-node ./dbseed.ts"
   },
   "private": true,
   "dependencies": {
