--- a/functions/package.json
+++ b/functions/package.json
@@ -16,9 +16,11 @@
   "dependencies": {
     "express": "^4.18.2",
     "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1"
+    "firebase-functions": "^4.3.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.8",
     "firebase-functions-test": "^3.1.0",
     "typescript": "^4.9.0"
   },
