--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ngrx/effects": "^17.1.0",
     "@ngrx/store": "^17.1.0",
     "@ngrx/store-devtools": "^17.1.0",
+    "dayjs": "^1.11.10",
     "echarts": "^5.4.3",
     "firebase": "^10.7.2",
     "ngx-echarts": "^17.1.0",
